<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    tools:context=".USCActivity"
    android:background="@color/backgroundColor">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/headingLayout"
        android:layout_centerHorizontal="true">
        <ImageView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:src="@drawable/la"/>
        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/los_angeles_attractions"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:fontFamily="serif"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/headingLayout"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <CheckBox
                android:id="@+id/checkbox_Crypto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/crypto_com_arena" />

            <ImageView
                android:id="@+id/icon_Crypto"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/more_info"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <CheckBox
                android:id="@+id/checkbox_Disney"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/disneyland_park" />

            <ImageView
                android:id="@+id/icon_Disney"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/more_info"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <CheckBox
                android:id="@+id/checkbox_Dodgers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/dodgers_stadium" />

            <ImageView
                android:id="@+id/icon_Dodgers"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/more_info"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <CheckBox
                android:id="@+id/checkbox_Griffith"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/griffith_observatory" />

            <ImageView
                android:id="@+id/icon_Griffith"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/more_info"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <CheckBox
                android:id="@+id/checkbox_Hollywood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/hollywood_sign" />

            <ImageView
                android:id="@+id/icon_Hollywood"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/more_info"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <CheckBox
                android:id="@+id/checkbox_LACMA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/los_angeles_county_museum_of_art" />

            <ImageView
                android:id="@+id/icon_LACMA"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/more_info"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <CheckBox
                android:id="@+id/checkbox_SMP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/santa_monica_pier" />

            <ImageView
                android:id="@+id/icon_SMP"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/more_info"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <CheckBox
                android:id="@+id/checkbox_Broad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/the_broad" />

            <ImageView
                android:id="@+id/icon_Broad"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/more_info"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <CheckBox
                android:id="@+id/checkbox_Getty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/the_getty" />

            <ImageView
                android:id="@+id/icon_Getty"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/more_info"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <CheckBox
                android:id="@+id/checkbox_Grove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/the_grove" />

            <ImageView
                android:id="@+id/icon_Grove"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/more_info"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <CheckBox
                android:id="@+id/checkbox_Universal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/universal_studios_hollywood" />

            <ImageView
                android:id="@+id/icon_Universal"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/more_info"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <CheckBox
                android:id="@+id/checkbox_Venice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="Venice Beach" />

            <ImageView
                android:id="@+id/icon_Venice"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/more_info"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/submit"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/linearLayout"
        android:layout_marginTop="50dp"
        style="@style/Widget.PlanMyDay.Button"/>

    <!-- Add an ImageView for the image popup (hidden initially) -->
    <ImageView
        android:id="@+id/popup_img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitCenter"
        android:visibility="invisible"/>

</RelativeLayout>
