<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:padding="16dp"
    tools:context=".LoginActivity">

    <!-- Logo and App Name -->
    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="wrap_content"
        android:layout_height="230dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"
        android:contentDescription="@string/app_logo"/>

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/plan_my_day"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        android:fontFamily="serif"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/logoImageView"
        />

    <!-- Email Input -->
    <LinearLayout
        android:id="@+id/emailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/appName">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/email"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/email_icon"/>

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:hint="@string/email"
            android:fontFamily="serif"
            android:inputType="textEmailAddress"
            android:autofillHints="ttrojan@usc.edu" />

    </LinearLayout>

    <!-- Password Input -->
    <LinearLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/emailLayout"
        android:contentDescription="@string/password_icon">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/password"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/password_icon"/>

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            android:fontFamily="serif"
            android:inputType="textPassword"
            android:autofillHints="123456" />

    </LinearLayout>

    <!-- Login Button -->
    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@id/passwordLayout"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/log_in"
        android:background="@color/buttonColor"
        android:fontFamily="serif"
        style="@style/Widget.PlanMyDay.Button" />

    <!-- Create Account Button -->
    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@color/buttonColor"
        android:text="@string/create_new_account"
        android:fontFamily="serif"
        style="@style/Widget.PlanMyDay.Button" />

    <!-- Forgot Password Button -->
    <Button
        android:id="@+id/forgotPasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@id/createAccountButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@color/buttonColor"
        android:text="@string/forgot_password"
        android:fontFamily="serif"
        style="@style/Widget.PlanMyDay.Button" />

</RelativeLayout>